--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,8 +5,8 @@
 }
 
 body {
-  background-color: black;
-  color: white;
+  background-color: rgb(244, 222, 168);
+  color: rgb(0, 0, 0);
 }
 
 .header {
@@ -21,7 +21,7 @@ body {
 .title {
   font-family: 'Kaushan';
   text-decoration: none;
-  color: white;
+  color: #7e4a15;
   font-size: 40px;
 }
 
@@ -70,7 +70,7 @@ nav img {
 
 .text-box {
   width: 90%;
-  color: #fff;
+  color: #7e4a15;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -85,7 +85,7 @@ nav img {
 .text-box p {
   margin: 10px 0 40px;
   font-size: 14px;
-  color: #fff;
+  color: #7e4a15;
 }
 
 .hero-btn {
@@ -132,7 +132,7 @@ nav .fa {
 
   .nav-links.active {
     position: absolute;
-    background: #f44336;
+    background: #0d2b62;
     height: 100vh;
     width: 200px;
     top: 0;
@@ -157,7 +157,7 @@ nav .fa {
 
 /* ----- Course -----*/
 
-.course {
+.project {
   width: 80%;
   margin: auto;
   text-align: center;
